app/modules/backend/service_httpbin.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-svc
  namespace: default
  labels:
    app: httpbin
    service: httpbin
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: httpbin
